# musicplayer

./: .gitignore  Cargo.toml  README.md  TODO.md  planning.txt  snippets.txt
src/: audio.rs  button.rs  file.rs  layout.rs  main.rs  playback.rs  test.rs  utils.rs
src/app/: message.rs  mod.rs  traits.rs
src/app/state/: audio.rs  files.rs  mod.rs  playlist.rs  state.rs
src/app/state/db/: database.rs  mod.rs  scanner.rs
src/app/view/: audio.rs  mod.rs  playlist.rs  view.rs
src/widget/: drag_button.rs  mod.rs
