# Main binary
[[bin]]
name = "m"
path = "src/main.rs"

# Testing binary
[[bin]]
name = "t"
path = "bin/playground.rs"
[package]
name = "musicplayer"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13.1", features = ["tokio", "advanced", "image"] }
rodio = { git = "https://github.com/RustAudio/rodio.git", features = ["symphonia", "symphonia-mp3"] }
tokio = { version = "1.44.0", features = ["full"] }
rusqlite = { version = "0.34.0", features = ["bundled"] }
anyhow = { version = "1.0" }
id3 = "1.16.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
